--- a/src/main/resources/tricera/heap/encodings/R-opt.yml
+++ b/src/main/resources/tricera/heap/encodings/R-opt.yml
@@ -5,7 +5,7 @@ ptr_type: "int"
 global_decls:
   - { name: "$allocCtr",  type: "int",          initial_value: "0" }
   - { name: "$cnt",       type: "unsigned int", initial_value: "0" }
-  - { name: "$last_cnt",  type: "unsigned int", initial_value: "0" }
+  - { name: "$last",      type: "HEAP_TYPE",    initial_value: null }
   - { name: "$last_addr", type: "unsigned int", initial_value: null }
   - { name: "$last_data", type: "HEAP_TYPE",    initial_value: null }
   - { name: "$p_g",       type: "int",          initial_value: null } # nondet init value
@@ -14,17 +14,13 @@ global_decls:
 predicates:
   - name: "$R"
     args:
-      - { name: "cnt",      type: "int" }
-      - { name: "last_cnt", type: "int" }
-  - name: "$W"
-    args:
-      - { name: "last_cnt", type: "int" }
-      - { name: "o",        type: "HEAP_TYPE" }
+      - { name: "cnt",       type: "int" }
+      - { name: "last",      type: "HEAP_TYPE" }
 
 # Initialisation code injected to the start of entry function
 init_code:
   - "$p_g = _;"
-  #- "assert($W(0, $HEAP_TYPE_DEFAULT()));"
+  - "$last = $HEAP_TYPE_DEFAULT();"
 
 # Heap operations
 read_fn:
@@ -38,16 +34,13 @@ read_fn:
     if ($last_addr == p) {
       result = $last_data;  
     } else {
-      int t;
       if ($p_g == p) {
-        assert($R($cnt, $last_cnt));
-        t = $last_cnt;
+        assert($R($cnt, $last));
+        result = $last;
       } else {
-        t = HAVOC_INT;
-        assume($R($cnt, t));
+        result = HAVOC_HEAP;
+        assume($R($cnt, result));
       }
-      result = HAVOC_HEAP;
-      assume($W(t, result));
       $last_addr = p;
       $last_data = result;
     }
@@ -61,10 +54,11 @@ write_fn:
     - { name: "loc", type: "int" }
   body: |
     ++$cnt;
-    $last_addr = p;
-    $last_data = e;
-    assert($W($cnt, e));
-    if ($p_g == p) { $last_cnt = $cnt; }
+    if (0 < p && p <= $allocCtr) {
+      $last_addr = p;
+      $last_data = e;
+      if ($p_g == p) { $last = e; }
+    }
 
 alloc_fn:
   return_type: "PTR_TYPE"
@@ -76,8 +70,7 @@ alloc_fn:
     ++$cnt;
     $last_addr = p;
     $last_data = e;
-    assert($W($cnt, e));
-    if ($p_g == p) { $last_cnt = $cnt; }
+    if ($p_g == p) { $last = e; }
     return p;
 
 free_fn:
