Update workflow for dev branch

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -20,6 +20,8 @@ jobs:
         distribution: 'adopt'
     - name: Set up sbt
       uses: sbt/setup-sbt@v1
+    - name: Patch build.sbt files of submodules
+      run: ./patch-builds.sh
     - name: Build
       run: sbt assembly
     - name: Test
