--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -12,7 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository (with submodules)
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+        fetch-depth: 0
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -20,6 +25,8 @@ jobs:
         distribution: 'adopt'
     - name: Set up sbt
       uses: sbt/setup-sbt@v1
+    - name: Patch build.sbt files of submodules
+      run: ./patch-builds.sh
     - name: Build
       run: sbt assembly
     - name: Test
