Use native image in regression tests

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Set up sbt
       uses: sbt/setup-sbt@v1
     - name: Build
-      run: sbt assembly
+      run: sbt nativeImage
     - name: Test
-      run: cd regression-tests; export TERM=xterm; ./runalldirs
+      run: cd regression-tests; export TERM=xterm; ./runalldirs -native
