Add reflect config for invariant encoding parser

--- a/src/main/resources/META-INF/native-image/uuverifiers/tricera/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/uuverifiers/tricera/reflect-config.json
@@ -1,5 +1,50 @@
 [
   {
+    "name": "tricera.concurrency.heap.InvariantEncodingParser$Declaration",
+    "allDeclaredFields": true,
+    "allPublicFields": true,
+    "allDeclaredMethods": true,
+    "allPublicMethods": true,
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true
+  },
+  {
+    "name": "tricera.concurrency.heap.InvariantEncodingParser$Argument",
+    "allDeclaredFields": true,
+    "allPublicFields": true,
+    "allDeclaredMethods": true,
+    "allPublicMethods": true,
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true
+  },
+  {
+    "name": "tricera.concurrency.heap.InvariantEncodingParser$Predicate",
+    "allDeclaredFields": true,
+    "allPublicFields": true,
+    "allDeclaredMethods": true,
+    "allPublicMethods": true,
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true
+  },
+  {
+    "name": "tricera.concurrency.heap.InvariantEncodingParser$FunctionDef",
+    "allDeclaredFields": true,
+    "allPublicFields": true,
+    "allDeclaredMethods": true,
+    "allPublicMethods": true,
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true
+  },
+  {
+    "name": "tricera.concurrency.heap.InvariantEncodingParser$ParsedEncoding",
+    "allDeclaredFields": true,
+    "allPublicFields": true,
+    "allDeclaredMethods": true,
+    "allPublicMethods": true,
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true
+  },
+  {
     "name": "ap.parser.IAtom[]"
   },
   {
